
Permissions/ownership fixes for installed files.
----------------------------------------------------------------------
Mon Jan 26 15:44:26 2004                        Michael Jennings (mej)

Added build-as-user option.

Removed unnecessary debugging statements in nuke_tree().

Force ownership in created tarballs to root/root.

Fixed -L option to work.
----------------------------------------------------------------------
Mon Jan 26 17:14:42 2004                        Michael Jennings (mej)

Fixed build as other user for SRPM's.

Cleaned up some debugging output.
----------------------------------------------------------------------
Wed Jan 28 11:11:26 2004                        Michael Jennings (mej)

Added support for importing PDR's.
----------------------------------------------------------------------
Fri Jan 30 18:16:20 2004                        Michael Jennings (mej)

Removed some unneeded debugging output.

Fixed package type identification to be more complete.

Fixed parsing of RPM build errors.

Fixed mzprep and mzpatch for PDR's.

Added module inclusion (and --help info) for buildtool's -s option.
----------------------------------------------------------------------
Fri Feb 13 22:16:37 2004                        Michael Jennings (mej)

Fixed minor buildtool bug.

Added perlpkg to assist with packaging perl modules and their
dependencies.
----------------------------------------------------------------------
Sun Feb 29 22:09:18 2004                        Michael Jennings (mej)

Fixed placement of newly-generated patches for SPM's.

Fixed overwriting of old packages with new ones in pkgtool.

Added code for alternative build/log tree layout.
----------------------------------------------------------------------
Fri Mar  5 17:26:11 2004                        Michael Jennings (mej)

The orc-style build tree layout seems to be working.
----------------------------------------------------------------------