@@ -21,7 +21,7 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
-# $Id: Prod.pm,v 1.22 2004/03/05 22:26:32 mej Exp $
+# $Id: Prod.pm,v 1.23 2004/03/14 15:42:08 mej Exp $
 #
 
 package Mezzanine::Prod;
@@ -99,7 +99,7 @@ make_build_dir
         &fatal_error("Unable to chdir to build directory -- $!\n");
     }
     chown($mz_uid, $mz_gid, $builddir);
-    dprint "Chose build directory $builddir\n";
+    #dprint "Chose build directory $builddir\n";
     return $builddir;
 }
 
@@ -116,7 +116,7 @@ make_log_dir
         &fatal_error("Unable to create log directory -- $!\n");
     }
     chown($mz_uid, $mz_gid, $logdir);
-    dprint "Chose log directory $logdir\n";
+    #dprint "Chose log directory $logdir\n";
     return $logdir;
 }
 
